# librouter

./: .env.example  .gitignore  Dockerfile  README.md  config.dev.yaml  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docs/: PLAN.md  PROGRESS.md
docs/code-review/: cr-1.md  t-1.md
docs/system/: README.md  architecture.md  data-plane.md
gateway/: accounting.py  app.py  auth.py  breaker.py  config.py  config_store.py  db.py  errors.py  logging.py  metrics.py  models.py  pricing.py  ratelimit.py  redis_state.py  router.py  secrets.py
gateway/config/: __init__.py  logger.json
gateway/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py
gateway/routing/: observe.py  refresh.py  weights.py
migrations/: 0001_init.sql  0002_client_trace_id.sql  0003_gateway_config.sql
scripts/: __init__.py  apply_migrations.py  real_provider_smoke.sh  seed_callers.py  seed_config.py  setup.sh
scripts/data/: caller-seeding.json  config-seeding.yaml
tests/: conftest.py  test_accounting.py  test_app_e2e.py  test_app_security.py  test_app_seed_callers.py  test_auth.py  test_breaker.py  test_config_store.py  test_db.py  test_log_redaction.py  test_models.py  test_pricing.py  test_ratelimit.py  test_redis_state.py  test_router.py  test_scripts_seed_callers.py  test_scripts_seed_config.py  test_secrets.py  test_stress.py
tests/providers/: test_anthropic_vendor.py  test_build_vendors.py  test_google_vendor.py  test_mock_vendors.py  test_openai_vendor.py
tests/routing/: test_observe.py  test_refresh.py  test_weights.py
(+20 files in other folders)
